[package]
name = "libsignal"
version = "1.0.0"
edition = "2024"

authors = ["Charlie Thomson <charlie@thmsn.dev>"]
description = "Cross-platform signal handling and graceful shutdown"
homepage = "https://github.com/charliethomson/libsignal"
repository = "https://github.com/charliethomson/libsignal"
readme = "README.md"
license = "MIT"
keywords = ["signal", "shutdown", "tokio", "graceful", "sigterm"]
categories = ["asynchronous", "os"]

[dependencies]
tokio = { version = "1.8", features = ["signal", "rt"], default-features = false }
tokio-util = { version = "0.7", features = ["rt"], default-features = false }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
tokio = { version = "1.8", features = ["signal", "time", "macros", "rt", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = [
    "fmt",
    "env-filter",
    "json",
] }
tracing = { version = "0.1", default-features = true }

[[example]]
name = "wait"
path = "examples/wait.rs"
